# diquark-analysis

./: .gitignore  README.md  pyproject.toml  run.sh
8jet/: ATLAS_136_60_500k.ipynb  ATLAS_136_70_100k.ipynb  CMS_136_70_100k.ipynb
diquark/: __init__.py  analysis.py  constants.py  features.py  helpers.py  load.py  main.py  onlyrf_main.py  plotting.py
diquark/config/: ATLAS_136_70_10j_5f.yaml  ATLAS_136_70_6j_5f.yaml  ATLAS_136_70_7j_5f.yaml  ATLAS_136_70_8j_5f.yaml  ATLAS_136_70_9j_5f.yaml  config_manager.py  constants.py  default_settings.yaml  settings.py
diquark/data/: loader.py  preprocessor.py
diquark/evaluation/: metrics.py  visualizations.py
diquark/features/: base.py  feature_extractor.py
diquark/models/: base.py  gradient_boosting.py  neural_network.py  random_forest.py
diquark/utils/: logger.py  results_manager.py
models/run_20231113010854/: gbc.joblib  model.keras
models/run_ATLAS_130_65_20240424085007/: gbc.joblib  model.keras
models/run_ATLAS_130_65_20240515133235/: gbc.joblib  model.keras
models/run_ATLAS_130_80_20240424083119/: gbc.joblib  model.keras
models/run_ATLAS_130_80_20240515131531/: gbc.joblib  model.keras
models/run_ATLAS_136_65_20240424093415/: gbc.joblib  model.keras
models/run_ATLAS_136_65_20240515171157/: gbc.joblib  model.keras
models/run_ATLAS_136_80_20240424091015/: gbc.joblib  model.keras
models/run_ATLAS_136_80_20240515141318/: gbc.joblib  model.keras
notebooks/: 01_feature_engineering.ipynb  02_model_training.ipynb  03_performance_plots.ipynb  04_overall_metrics.ipynb  05_Plots.ipynb  testing.ipynb
(+16 files in other folders)
